data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_985.wast
;; 6. **Test: Conditional Branching with Function Calls**    - **Description**: Implement conditional branches (`if` instruction) within a function. The branches navigate different paths including another function call. Return from the function should contain a `br` instruction that verifies if the operand stack is correctly managed.    - **Constraint Checked**: Checks correct path execution and stack operations for conditionally branched paths with function calls.    - **Improper Handling Aspect**: Incorrect path execution or branch due to mismanaged stack height or state.

(assert_invalid
  (module
    (func $conditional_branching_with_function_calls (result i32)
      (local i32)
      (if (result i32)
        (i32.const 1)
        (then
          (call $inner_func)
          (br 0)
        )
        (else
          (call $inner_func)
          (i32.const 0)
        )
      )
      (i32.const 1)
    )
    (func $inner_func (local i32)
      (i32.const 2)
      (local.set 0)
    )
  )
  "type mismatch"
)